<resources>
    <string name="exchange_rate_api_key" translatable="false">d8e57467c0c4ee6216d7cc98</string>
    <string name="app_name">Evaluation_app</string>
    <string name="welcome_message">Welcome to CurrencyConvApp</string>
    <string name="welcome_paragraph"> Welcome to our app!
        We are excited to have you here.
        Explore our features and enjoy a seamless experience.
        Get started now and make the most of your journey with us.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="side_menu">Side Menu</string>
    <string name="header">Header</string>

    <string name="welcome_to_app">Welcome to CurrencyConvApp</string>
    <string name="create_account_prompt">Let\'s help you create an account</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="terms_and_conditions">I have read and accepted the terms and conditions</string>
    <string name="already_have_account">Already have an account? Login</string>

    <string name="welcome_back">Welcome back!</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>

    <string name="welcome_to">Welcome to</string>
    <string name="convertor">Convertor</string>
    <string name="convertor_zitouna">Convertor Zitouna</string>
    <string name="reviews">Reviews</string>
    <string name="logout">Logout</string>

    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="convert">Convert</string>
    <string name="result">Result</string>


    <string name="rate_application">Rate the application</string>
    <string name="seeking_improvement">Seeking to improve the application!</string>
    <string name="help_us_rate">Don\'t hesitate to rate it in order to help us</string>
    <string name="ignore">Ignore</string>
    <string name="rate_now">Rate now</string>

    <string name="well_done">Well done!</string>
    <string name="review_submitted">Your review has been submitted successfully!</string>

</resources>