<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".Welcome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/CornerImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/group_1" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/TranslateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="160dp"
            android:contentDescription="Traduire la page"
            android:clickable="true"
            android:backgroundTint="@color/green"
            app:tint="@color/white"
            app:srcCompat="@drawable/baseline_translate_24" />

    </LinearLayout>

    <ImageView
        android:id="@+id/CenterImg"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/undraw_transfer_money_re_6o1h"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@color/gray"
        />

    <TextView
        android:id="@+id/paragraphIntro"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_paragraph"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textColor="@color/Softgray"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/GoToLoginPage"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:background="@drawable/button_shape"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/GoToRegisterPage"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:background="@drawable/button_shape"
        />


</LinearLayout>