<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".Register">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/cornerImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/group_1"
            />

        <ImageView
            android:id="@+id/arrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            app:tint="@color/white"
            android:src="@drawable/baseline_arrow_back_ios_new_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/TranslateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="340dp"
            android:contentDescription="Traduire la page"
            android:clickable="true"
            android:backgroundTint="@color/green"
            app:tint="@color/white"
            app:srcCompat="@drawable/baseline_translate_24" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout"
        android:text="@string/welcome_to_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/gray"
        />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:text="@string/create_account_prompt"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:textColor="@color/Softgray"
        />

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/text2"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/username"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:hint="Enter your username"
            android:paddingStart="16dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/Lightgray"
            />
        <EditText
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:hint="Enter your email"
            android:paddingStart="16dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/Lightgray"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:hint="Enter your password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/Lightgray"
            />
        <EditText
            android:id="@+id/age"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:hint="Enter your age"
            android:paddingStart="16dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/Lightgray"
            />
        <EditText
            android:id="@+id/phone"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:hint="Enter your phone number"
            android:paddingStart="16dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/Lightgray"
            />
        <RadioGroup
            android:id="@+id/genre"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/female" />
            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />
        </RadioGroup>
        <CheckBox
            android:id="@+id/conditions"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/terms_and_conditions"
            android:textSize="14sp"
            />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/RegisterBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/form"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:background="@drawable/button_shape"
        />

    <TextView
        android:id="@+id/RedirectiontoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RegisterBtn"
        android:text="@string/already_have_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textColor="@color/Softgray"
        />

</RelativeLayout>