<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/transp"
        tools:openDrawer="start"
        tools:context=".Reviews">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FAFAFA"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@color/green" />

                <RelativeLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-75dp">

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_white_100" />
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:padding="25dp"
                        android:src="@drawable/reviews"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/rateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_application"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/rateText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seeking_improvement"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/Softgray" />

                <TextView
                    android:id="@+id/rateText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_us_rate"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/Softgray" />

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    style="@style/MyRatingBar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/ignoreBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ignore"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:background="@drawable/button_shape"
                        android:backgroundTint="@color/Softgray" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/rateBtn"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate_now"
                        android:textAllCaps="false"
                        android:textColor="#FFFFFF"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:background="@drawable/button_shape"/>

                </LinearLayout>

        </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>


