<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        tools:context=".Convertor">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/green"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/CornerImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/group_1" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/TranslateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="160dp"
                android:contentDescription="Traduire la page"
                android:clickable="true"
                android:backgroundTint="@color/green"
                app:tint="@color/white"
                app:srcCompat="@drawable/baseline_translate_24" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/MenuBtn"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:clickable="true"
            android:contentDescription="Ouvrir le sidebar"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            app:srcCompat="@drawable/baseline_menu_24"
            style="@style/NoShadowButton" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/currency"
            android:textColor="@color/green"
            android:textSize="30dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text1"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/convertor"
            android:textColor="@color/green"
            android:textSize="30dp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/convertImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_below="@id/text2"
            android:src="@drawable/convert"/>

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/convertImage"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:text="@string/amount"
            android:textColor="@color/Softgray"
            android:textSize="18dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/inputAmount"
            android:layout_below="@id/text"
            android:layout_width="370dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:padding="8dp"
            android:layout_gravity="center"
            android:hint="Enter the amount"
            android:paddingStart="16dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/Lightgray"
            />

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputAmount"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:text="@string/from"
            android:textColor="@color/Softgray"
            android:textSize="18dp"
            android:textStyle="bold"
            />
        <Spinner
            android:id="@+id/inputCurrencySpinner"
            android:layout_below="@id/text3"
            android:layout_width="370dp"
            android:layout_height="48dp"
            android:background="@drawable/dropdown_shape"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:padding="8dp"
            />
        <TextView
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputCurrencySpinner"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:text="@string/to"
            android:textColor="@color/Softgray"
            android:textSize="18dp"
            android:textStyle="bold"
            />
        <Spinner
            android:id="@+id/outputCurrencySpinner"
            android:layout_below="@id/text4"
            android:layout_width="370dp"
            android:layout_height="48dp"
            android:background="@drawable/dropdown_shape"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:padding="8dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ConvertBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/outputCurrencySpinner"
            android:text="@string/convert"
            android:textColor="@android:color/white"
            android:background="@drawable/button_shape"
            />

        <TextView
            android:id="@+id/text5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ConvertBtn"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:text="@string/result"
            android:textColor="@color/Softgray"
            android:textSize="18dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/result"
            android:layout_below="@id/text5"
            android:layout_width="370dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:padding="8dp"
            android:paddingStart="16dp"
            android:hint="Converted amount"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/Lightgray"
            />
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_navigation"
        app:headerLayout="@layout/nav_header"/>


</androidx.drawerlayout.widget.DrawerLayout>